--- a/AiSearchIndexingFunction/Properties/launchSettings.json
+++ b/AiSearchIndexingFunction/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "FormProcessorFunction": {
+    "AiSearchIndexFunction": {
       "commandName": "Project",
       "environmentVariables": {
       }
