--- a/AzureUtilities/AzureUtilities.csproj
+++ b/AzureUtilities/AzureUtilities.csproj
@@ -9,7 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Azure.AI.DocumentIntelligence" Version="1.0.0-beta.2" />
     <PackageReference Include="Azure.AI.FormRecognizer" Version="4.1.0" />
-    <PackageReference Include="Azure.Identity" Version="1.10.4" />
+     <PackageReference Include="Azure.Search.Documents" Version="11.5.1" />
+     <PackageReference Include="Azure.Identity" Version="1.10.4" />
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.17.4" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.6.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
@@ -17,6 +18,14 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+     <PackageReference Include="Microsoft.SemanticKernel" Version="1.7.1" />
+     <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.7.1" />
+     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureAISearch" Version="1.7.1-alpha" />
+     <PackageReference Include="Microsoft.SemanticKernel.Plugins.Memory" Version="1.7.1-alpha" />
+     <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.7.1" />
+     <PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.7.1" />
   </ItemGroup>
-
+  <ItemGroup>
+    <EmbeddedResource Include="Prompts\**\*.yaml" />
+ </ItemGroup>
 </Project>
