Nuget updates Updates for SK v1.18

--- a/AzureUtilities/AzureUtilities.csproj
+++ b/AzureUtilities/AzureUtilities.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.AI.DocumentIntelligence" Version="1.0.0-beta.2" />
+    <PackageReference Include="Azure.AI.DocumentIntelligence" Version="1.0.0-beta.3" />
     <PackageReference Include="Azure.AI.FormRecognizer" Version="4.1.0" />
      <PackageReference Include="Azure.Search.Documents" Version="11.6.0" />
      <PackageReference Include="Azure.Identity" Version="1.12.0" />
@@ -18,12 +18,13 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
-     <PackageReference Include="Microsoft.SemanticKernel" Version="1.17.1" />
-     <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.17.1" />
-     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureAISearch" Version="1.17.1-alpha" />
-     <PackageReference Include="Microsoft.SemanticKernel.Plugins.Memory" Version="1.17.1-alpha" />
-     <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.17.1" />
-     <PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.17.1" />
+     <PackageReference Include="Microsoft.SemanticKernel" Version="1.18.0-rc" />
+     <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.18.0-rc" />
+     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureAISearch" Version="1.18.0-alpha" />
+     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="1.18.0-rc" />
+     <PackageReference Include="Microsoft.SemanticKernel.Plugins.Memory" Version="1.18.0-alpha" />
+     <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.18.0-rc" />
+     <PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.18.0-rc" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Prompts\**\*.yaml" />
