--- a/DocumentIntelligenceFunction/DocumentIntelligenceFunction.csproj
+++ b/DocumentIntelligenceFunction/DocumentIntelligenceFunction.csproj
@@ -21,8 +21,8 @@
       <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="1.3.2" />
       <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
       <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.3.0" />
-      <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.ServiceBus" Version="5.20.1" />
-      <PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.17.1" />
+      <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.ServiceBus" Version="5.21.0" />
+      <PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.18.0-rc" />
    </ItemGroup>
    <ItemGroup>
       <ProjectReference Include="..\AzureUtilities\AzureUtilities.csproj" />
