--- a/AzureUtilities/AzureUtilities.csproj
+++ b/AzureUtilities/AzureUtilities.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.AI.DocumentIntelligence" Version="1.0.0-beta.3" />
+    <PackageReference Include="Azure.AI.DocumentIntelligence" Version="1.0.0" />
     <PackageReference Include="Azure.AI.FormRecognizer" Version="4.1.0" />
      <PackageReference Include="Azure.Search.Documents" Version="11.6.0" />
      <PackageReference Include="Azure.Identity" Version="1.13.1" />
@@ -18,13 +18,13 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0" />
-     <PackageReference Include="Microsoft.SemanticKernel" Version="1.31.0" />
-     <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.31.0" />
-     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureAISearch" Version="1.31.0-preview" />
-     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="1.31.0" />
-     <PackageReference Include="Microsoft.SemanticKernel.Plugins.Memory" Version="1.31.0-alpha" />
-     <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.31.0" />
-     <PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.31.0" />
+     <PackageReference Include="Microsoft.SemanticKernel" Version="1.32.0" />
+     <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.32.0" />
+     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureAISearch" Version="1.32.0-preview" />
+     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="1.32.0" />
+     <PackageReference Include="Microsoft.SemanticKernel.Plugins.Memory" Version="1.32.0-alpha" />
+     <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.32.0" />
+     <PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.32.0" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Prompts\**\*.yaml" />
