wip on custom field indexing

--- a/infra/constants/configKeys.json
+++ b/infra/constants/configKeys.json
@@ -12,8 +12,9 @@
     "SERVICE_BUS_PROCESSED_QUEUE_NAME": "SERVICE_BUS_PROCESSED_QUEUE_NAME",
     "SERVICE_BUS_MOVE_QUEUE_NAME": "SERVICE_BUS_MOVE_QUEUE_NAME",
     "SERVICE_BUS_NAMESPACE_NAME": "SERVICE_BUS_NAMESPACE_NAME",
-    "SERVICE_BUS_QUEUE_NAME": "SERVICE_BUS_QUEUE_NAME",
+    "SERVICE_BUS_DOC_QUEUE_NAME": "SERVICE_BUS_DOC_QUEUE_NAME",
     "SERVICE_BUS_TOINDEX_QUEUE_NAME": "SERVICE_BUS_TOINDEX_QUEUE_NAME",
+    "SERVICE_BUS_CUSTOMFIELD_QUEUE_NAME": "SERVICE_BUS_CUSTOMFIELD_QUEUE_NAME",
     
     "AZURE_AISEARCH_ENDPOINT": "AZURE_AISEARCH_ENDPOINT",
     "AZURE_AISEARCH_ADMIN_KEY": "AZURE_AISEARCH_ADMIN_KEY",
