--- a/infra/constants/configKeys.json
+++ b/infra/constants/configKeys.json
@@ -1,31 +1,31 @@
 {
-    "DOCUMENT_SOURCE_CONTAINER_NAME": "DOCUMENT_SOURCE_CONTAINER_NAME",
-    "DOCUMENT_PROCESS_RESULTS_CONTAINER_NAME": "DOCUMENT_PROCESS_RESULTS_CONTAINER_NAME",
-    "DOCUMENT_COMPLETED_CONTAINER_NAME" : "DOCUMENT_COMPLETED_CONTAINER_NAME",
-    "DOCUMENT_STORAGE_ACCOUNT_NAME": "DOCUMENT_STORAGE_ACCOUNT_NAME",
-    
-    "DOCUMENT_INTELLIGENCE_KEY": "DOCUMENT_INTELLIGENCE_KEY",
-    "DOCUMENT_INTELLIGENCE_ENDPOINT": "DOCUMENT_INTELLIGENCE_ENDPOINT",
-    "DOCUMENT_INTELLIGENCE_MODEL_NAME": "DOCUMENT_INTELLIGENCE_MODEL_NAME",
-    
-    "SERVICE_BUS_CONNECTION": "SERVICE_BUS_CONNECTION",
-    "SERVICE_BUS_PROCESSED_QUEUE_NAME": "SERVICE_BUS_PROCESSED_QUEUE_NAME",
-    "SERVICE_BUS_MOVE_QUEUE_NAME": "SERVICE_BUS_MOVE_QUEUE_NAME",
-    "SERVICE_BUS_NAMESPACE_NAME": "SERVICE_BUS_NAMESPACE_NAME",
-    "SERVICE_BUS_DOC_QUEUE_NAME": "SERVICE_BUS_DOC_QUEUE_NAME",
-    "SERVICE_BUS_TOINDEX_QUEUE_NAME": "SERVICE_BUS_TOINDEX_QUEUE_NAME",
-    "SERVICE_BUS_CUSTOMFIELD_QUEUE_NAME": "SERVICE_BUS_CUSTOMFIELD_QUEUE_NAME",
-    
-    "AZURE_AISEARCH_ENDPOINT": "AZURE_AISEARCH_ENDPOINT",
+    "APIM_SUBSCRIPTION_KEY": "APIM_SUBSCRIPTION_KEY",
+
     "AZURE_AISEARCH_ADMIN_KEY": "AZURE_AISEARCH_ADMIN_KEY",
+    "AZURE_AISEARCH_ENDPOINT": "AZURE_AISEARCH_ENDPOINT",
     "AZURE_AISEARCH_INCLUDE_GENERAL_INDEX": "AZURE_AISEARCH_INCLUDE_GENERAL_INDEX",
-    
-    "AZURE_OPENAI_ENDPOINT": "AZURE_OPENAI_ENDPOINT",
-    "AZURE_OPENAI_EMBEDDING_MODEL": "AZURE_OPENAI_EMBEDDING_MODEL",
-    "AZURE_OPENAI_EMBEDDING_DEPLOYMENT": "AZURE_OPENAI_EMBEDDING_DEPLOYMENT",
-    "AZURE_OPENAI_EMBEDDING_MAXTOKENS": "AZURE_OPENAI_EMBEDDING_MAXTOKENS",
+    "AZURE_AISEARCH_INDEX_NAME": "AZURE_AISEARCH_INDEX_NAME",
+
     "AZURE_OPENAI_CHAT_DEPLOYMENT": "AZURE_OPENAI_CHAT_DEPLOYMENT",
     "AZURE_OPENAI_CHAT_MODEL": "AZURE_OPENAI_CHAT_MODEL",
+    "AZURE_OPENAI_EMBEDDING_DEPLOYMENT": "AZURE_OPENAI_EMBEDDING_DEPLOYMENT",
+    "AZURE_OPENAI_EMBEDDING_MAXTOKENS": "AZURE_OPENAI_EMBEDDING_MAXTOKENS",
+    "AZURE_OPENAI_EMBEDDING_MODEL": "AZURE_OPENAI_EMBEDDING_MODEL",
+    "AZURE_OPENAI_ENDPOINT": "AZURE_OPENAI_ENDPOINT",
 
-    "APIM_SUBSCRIPTION_KEY": "APIM_SUBSCRIPTION_KEY"
+    "DOCUMENT_INTELLIGENCE_ENDPOINT": "DOCUMENT_INTELLIGENCE_ENDPOINT",
+    "DOCUMENT_INTELLIGENCE_KEY": "DOCUMENT_INTELLIGENCE_KEY",
+    "DOCUMENT_INTELLIGENCE_MODEL_NAME": "DOCUMENT_INTELLIGENCE_MODEL_NAME",
+
+    "SERVICEBUS_CONNECTION": "SERVICEBUS_CONNECTION",
+    "SERVICEBUS_CUSTOMFIELD_QUEUE_NAME": "SERVICEBUS_CUSTOMFIELD_QUEUE_NAME",
+    "SERVICEBUS_DOC_QUEUE_NAME": "SERVICEBUS_DOC_QUEUE_NAME",
+    "SERVICEBUS_MOVE_QUEUE_NAME": "SERVICEBUS_MOVE_QUEUE_NAME",
+    "SERVICEBUS_NAMESPACE_NAME": "SERVICEBUS_NAMESPACE_NAME",
+    "SERVICEBUS_TOINDEX_QUEUE_NAME": "SERVICEBUS_TOINDEX_QUEUE_NAME",
+
+    "STORAGE_ACCOUNT_NAME": "STORAGE_ACCOUNT_NAME",
+    "STORAGE_COMPLETED_CONTAINER_NAME": "STORAGE_COMPLETED_CONTAINER_NAME",
+    "STORAGE_PROCESS_RESULTS_CONTAINER_NAME": "STORAGE_PROCESS_RESULTS_CONTAINER_NAME",
+    "STORAGE_SOURCE_CONTAINER_NAME": "STORAGE_SOURCE_CONTAINER_NAME"
 }
