--- a/AiSearchIndexingFunction/AiSearchIndexingFunction.csproj
+++ b/AiSearchIndexingFunction/AiSearchIndexingFunction.csproj
@@ -3,6 +3,7 @@
       <TargetFramework>net8.0</TargetFramework>
       <AzureFunctionsVersion>v4</AzureFunctionsVersion>
       <OutputType>Exe</OutputType>
+      <RootNamespace>HighVolumeProcessing.AiSearchIndexingFunction</RootNamespace>
    </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
@@ -26,7 +27,7 @@
 
    </ItemGroup>
    <ItemGroup>
-      <ProjectReference Include="..\AzureUtilities\AzureUtilities.csproj" />
+      <ProjectReference Include="..\AzureUtilities\UtilityLibrary.csproj" />
    </ItemGroup>
    <ItemGroup>
       <None Update="host.json">
