--- a/DocumentIntelligenceFunction/DocumentIntelligenceFunction.csproj
+++ b/DocumentIntelligenceFunction/DocumentIntelligenceFunction.csproj
@@ -3,6 +3,7 @@
       <TargetFramework>net8.0</TargetFramework>
       <AzureFunctionsVersion>v4</AzureFunctionsVersion>
       <OutputType>Exe</OutputType>
+      <RootNamespace>HighVolumeProcessing.DocumentIntelligence</RootNamespace>
    </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
@@ -25,7 +26,7 @@
       <PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.43.0" />
    </ItemGroup>
    <ItemGroup>
-      <ProjectReference Include="..\AzureUtilities\AzureUtilities.csproj" />
+      <ProjectReference Include="..\AzureUtilities\UtilityLibrary.csproj" />
    </ItemGroup>
    <ItemGroup>
       <None Update="host.json">
