--- a/DocumentQueueingFunction/DocumentQueueingFunction.csproj
+++ b/DocumentQueueingFunction/DocumentQueueingFunction.csproj
@@ -3,7 +3,8 @@
       <TargetFramework>net8.0</TargetFramework>
       <AzureFunctionsVersion>v4</AzureFunctionsVersion>
       <OutputType>Exe</OutputType>
-      <UserSecretsId>03ea95c0-9a91-402c-ba70-7806209bf499</UserSecretsId>
+
+      <RootNamespace>HighVolumeProcessing.DocumentQuestionsFunction</RootNamespace>
    </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
@@ -18,18 +19,21 @@
       <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
    </ItemGroup>
    <ItemGroup>
-      <ProjectReference Include="..\AzureUtilities\AzureUtilities.csproj" />
+      <ProjectReference Include="..\AzureUtilities\UtilityLibrary.csproj" />
    </ItemGroup>
    <ItemGroup>
       <None Update="host.json">
          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
       <None Update="local.settings.json">
-         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
          <CopyToPublishDirectory>Never</CopyToPublishDirectory>
       </None>
    </ItemGroup>
    <ItemGroup>
       <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
+   </ItemGroup>
+   <ItemGroup>
+     <Folder Include="Properties\PublishProfiles\" />
    </ItemGroup>
 </Project>
