WIP on cosmos tracking

--- a/infra/constants/configKeys.json
+++ b/infra/constants/configKeys.json
@@ -13,6 +13,10 @@
     "AZURE_OPENAI_EMBEDDING_MODEL": "AZURE_OPENAI_EMBEDDING_MODEL",
     "AZURE_OPENAI_ENDPOINT": "AZURE_OPENAI_ENDPOINT",
 
+    "COSMOS_CONNECTION": "COSMOS_CONNECTION",
+    "COSMOS_DB_NAME": "COSMOS_DB_NAME",
+    "COSMOS_CONTAINER_NAME": "COSMOS_CONTAINER_NAME",
+
     "DOCUMENT_INTELLIGENCE_ENDPOINT": "DOCUMENT_INTELLIGENCE_ENDPOINT",
     "DOCUMENT_INTELLIGENCE_KEY": "DOCUMENT_INTELLIGENCE_KEY",
     "DOCUMENT_INTELLIGENCE_MODEL_NAME": "DOCUMENT_INTELLIGENCE_MODEL_NAME",
