--- a/AiSearchIndexingFunction/AiSearchIndexingFunction.csproj
+++ b/AiSearchIndexingFunction/AiSearchIndexingFunction.csproj
@@ -4,6 +4,7 @@
       <AzureFunctionsVersion>v4</AzureFunctionsVersion>
       <OutputType>Exe</OutputType>
       <RootNamespace>HighVolumeProcessing.AiSearchIndexingFunction</RootNamespace>
+      <AzureCosmosDisableNewtonsoftJsonCheck>true</AzureCosmosDisableNewtonsoftJsonCheck>
    </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
