--- a/AzureUtilities/UtilityLibrary.csproj
+++ b/AzureUtilities/UtilityLibrary.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
      <RootNamespace>HighVolumeProcessing.UtilityLibrary</RootNamespace>
+     <AzureCosmosDisableNewtonsoftJsonCheck>true</AzureCosmosDisableNewtonsoftJsonCheck>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,17 +16,18 @@
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.18.4" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.7.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.48.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.3" />
-     <PackageReference Include="Microsoft.SemanticKernel" Version="1.43.0" />
-     <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.43.0" />
-     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureAISearch" Version="1.43.0-preview" />
-     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="1.43.0" />
-     <PackageReference Include="Microsoft.SemanticKernel.Plugins.Memory" Version="1.43.0-alpha" />
-     <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.43.0" />
-     <PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.43.0" />
+     <PackageReference Include="Microsoft.SemanticKernel" Version="1.44.0" />
+     <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.44.0" />
+     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureAISearch" Version="1.44.0-preview" />
+     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="1.44.0" />
+     <PackageReference Include="Microsoft.SemanticKernel.Plugins.Memory" Version="1.44.0-alpha" />
+     <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.44.0" />
+     <PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.44.0" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Prompts\**\*.yaml" />
