--- a/DocumentIntelligenceFunction/DocumentIntelligenceFunction.csproj
+++ b/DocumentIntelligenceFunction/DocumentIntelligenceFunction.csproj
@@ -4,6 +4,7 @@
       <AzureFunctionsVersion>v4</AzureFunctionsVersion>
       <OutputType>Exe</OutputType>
       <RootNamespace>HighVolumeProcessing.DocumentIntelligence</RootNamespace>
+      <AzureCosmosDisableNewtonsoftJsonCheck>true</AzureCosmosDisableNewtonsoftJsonCheck>
    </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
@@ -23,7 +24,6 @@
       <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.23.0" />
       <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
       <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.ServiceBus" Version="5.22.2" />
-      <PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.43.0" />
    </ItemGroup>
    <ItemGroup>
       <ProjectReference Include="..\AzureUtilities\UtilityLibrary.csproj" />
