--- a/DocumentQuestionsFunction/DocumentQuestionsFunction.csproj
+++ b/DocumentQuestionsFunction/DocumentQuestionsFunction.csproj
@@ -4,6 +4,7 @@
 		<AzureFunctionsVersion>v4</AzureFunctionsVersion>
 		<OutputType>Exe</OutputType>
        <RootNamespace>HighVolumeProcessing.DocumentQuestionsFunction</RootNamespace>
+      <AzureCosmosDisableNewtonsoftJsonCheck>true</AzureCosmosDisableNewtonsoftJsonCheck>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Azure.Identity" Version="1.13.2" />
