--- a/DocumentQueueingFunction/DocumentQueueingFunction.csproj
+++ b/DocumentQueueingFunction/DocumentQueueingFunction.csproj
@@ -5,6 +5,7 @@
       <OutputType>Exe</OutputType>
 
       <RootNamespace>HighVolumeProcessing.DocumentQuestionsFunction</RootNamespace>
+      <AzureCosmosDisableNewtonsoftJsonCheck>true</AzureCosmosDisableNewtonsoftJsonCheck>
    </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
