--- a/ProcessedFileMover/ProcessedFileMover.csproj
+++ b/ProcessedFileMover/ProcessedFileMover.csproj
@@ -4,6 +4,7 @@
       <AzureFunctionsVersion>v4</AzureFunctionsVersion>
       <OutputType>Exe</OutputType>
         <RootNamespace>HighVolumeProcessing.ProcessedFileMover</RootNamespace>
+      <AzureCosmosDisableNewtonsoftJsonCheck>true</AzureCosmosDisableNewtonsoftJsonCheck>
    </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="Azure.Identity" Version="1.13.2" />
