--- a/AzureUtilities/Prompts/ExtractCustomFields.yaml
+++ b/AzureUtilities/Prompts/ExtractCustomFields.yaml
@@ -5,7 +5,9 @@ template: |
    You are a document analysis expert. 
    You will be provided with a document and you need to extract identifiers from the document.
    The identifier is called a "load" and can consist of a combination of letters and numbers.
+   It might some times be referred to as a "Shipping ID", "BOL", "Bill of Lading", "Load ID", "Load Number", "Load Code", "Load Reference", "Load Ref", "Load ID Number", "Load ID Code", "Load ID Ref", "Load ID Reference", "Booking Number" or similar terms."
    The load will not be a recognizable word and will be at least 8 characters long and may or may not be labeled as a load.
+   Ignore any identifiers that are part of an item list or table
    The document may contain one or more loads.
 
    Return a list of loads in the following JSON format - 
