--- a/AzureUtilities/UtilityLibrary.csproj
+++ b/AzureUtilities/UtilityLibrary.csproj
@@ -28,6 +28,7 @@
      <PackageReference Include="Microsoft.SemanticKernel.Plugins.Memory" Version="1.44.0-alpha" />
      <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.44.0" />
      <PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.44.0" />
+     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Prompts\**\*.yaml" />
