--- a/DocumentQueueingFunction/DocumentQueueingFunction.csproj
+++ b/DocumentQueueingFunction/DocumentQueueingFunction.csproj
@@ -3,33 +3,38 @@
       <TargetFramework>net8.0</TargetFramework>
       <AzureFunctionsVersion>v4</AzureFunctionsVersion>
       <OutputType>Exe</OutputType>
-      <UserSecretsId>03ea95c0-9a91-402c-ba70-7806209bf499</UserSecretsId>
+
+      <RootNamespace>HighVolumeProcessing.DocumentQuestionsFunction</RootNamespace>
+      <AzureCosmosDisableNewtonsoftJsonCheck>true</AzureCosmosDisableNewtonsoftJsonCheck>
    </PropertyGroup>
    <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.1" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.3" />
       <FrameworkReference Include="Microsoft.AspNetCore.App" />
       <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="2.0.0" />
-      <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.0" />
-      <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="2.0.0" />
-      <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.22.0" />
+      <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.1" />
+      <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="2.0.1" />
+      <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.23.0" />
       <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
    </ItemGroup>
    <ItemGroup>
-      <ProjectReference Include="..\AzureUtilities\AzureUtilities.csproj" />
+      <ProjectReference Include="..\AzureUtilities\UtilityLibrary.csproj" />
    </ItemGroup>
    <ItemGroup>
       <None Update="host.json">
          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
       <None Update="local.settings.json">
-         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
          <CopyToPublishDirectory>Never</CopyToPublishDirectory>
       </None>
    </ItemGroup>
    <ItemGroup>
       <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
+   </ItemGroup>
+   <ItemGroup>
+     <Folder Include="Properties\PublishProfiles\" />
    </ItemGroup>
 </Project>
