Enhance OpenAI deployment configuration and add post-deployment script; refactor related Bicep files and improve error handling in indexing functions

--- a/azure.yaml
+++ b/azure.yaml
@@ -36,4 +36,7 @@ hooks:
   preup: 
     - shell: pwsh
       run: ./scripts/preup.ps1
+  postdeploy:
+    - shell: pwsh
+      run: ./scripts/postdeploy.ps1
     
