Migrate to Microsoft.Extensions.AI for AI operations
Replaced Semantic Kernel with Microsoft.Extensions.AI abstractions
(`IChatClient` and `IEmbeddingGenerator`) for prompt-based AI
operations. Removed all Semantic Kernel-related packages and added
`Microsoft.Extensions.AI`, `Microsoft.Extensions.AI.OpenAI`,
`Azure.AI.OpenAI`, and `YamlDotNet`.

Major code changes include:
- Refactored `SkHelper.cs` to use `IChatClient` and `IEmbeddingGenerator`.
- Introduced `PromptLoader.cs` for YAML-based prompt handling.
- Added `TextChunker.cs` to replace Semantic Kernel's text chunking.
- Updated dependent files to use the new utilities.

Preserved all existing functionality, including question answering,
streaming responses, custom field extraction, and embedding generation.
Improved performance by simplifying initialization and reducing
overhead. Verified that all projects compile without errors.

Known limitations:
- `Microsoft.Extensions.AI.OpenAI` and `Azure.AI.OpenAI` are in preview/beta.
- Approximate token counting in `TextChunker` may require future updates.

Rollback instructions provided if needed.

--- a/src/AzureUtilities/UtilityLibrary.csproj
+++ b/src/AzureUtilities/UtilityLibrary.csproj
@@ -17,17 +17,14 @@
     <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.49.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
-     <PackageReference Include="Microsoft.SemanticKernel" Version="1.48.0" />
-     <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.48.0" />
-     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureAISearch" Version="1.48.0-preview" />
-     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="1.48.0" />
-     <PackageReference Include="Microsoft.SemanticKernel.Plugins.Memory" Version="1.48.0-alpha" />
-     <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.48.0" />
-     <PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.48.0" />
-     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.AI" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.AI.OpenAI" Version="10.0.1-preview.1.25571.5" />
+    <PackageReference Include="Azure.AI.OpenAI" Version="2.5.0-beta.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="YamlDotNet" Version="16.2.1" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Prompts\**\*.yaml" />
