moving away from key to use only managed identity

--- a/infra/constants/configKeys.json
+++ b/infra/constants/configKeys.json
@@ -1,7 +1,4 @@
 {
-    "APIM_SUBSCRIPTION_KEY": "APIM_SUBSCRIPTION_KEY",
-
-    "AZURE_AISEARCH_ADMIN_KEY": "AZURE_AISEARCH_ADMIN_KEY",
     "AZURE_AISEARCH_ENDPOINT": "AZURE_AISEARCH_ENDPOINT",
     "AZURE_AISEARCH_INCLUDE_GENERAL_INDEX": "AZURE_AISEARCH_INCLUDE_GENERAL_INDEX",
     "AZURE_AISEARCH_INDEX_NAME": "AZURE_AISEARCH_INDEX_NAME",
@@ -13,12 +10,12 @@
     "AZURE_OPENAI_EMBEDDING_MODEL": "AZURE_OPENAI_EMBEDDING_MODEL",
     "AZURE_OPENAI_ENDPOINT": "AZURE_OPENAI_ENDPOINT",
 
-    "COSMOS_CONNECTION": "COSMOS_CONNECTION",
+    "COSMOS_ACCOUNT_ENDPOINT": "COSMOS_ACCOUNT_ENDPOINT",
     "COSMOS_DB_NAME": "COSMOS_DB_NAME",
     "COSMOS_CONTAINER_NAME": "COSMOS_CONTAINER_NAME",
 
     "DOCUMENT_INTELLIGENCE_ENDPOINT": "DOCUMENT_INTELLIGENCE_ENDPOINT",
-    "DOCUMENT_INTELLIGENCE_KEY": "DOCUMENT_INTELLIGENCE_KEY",
+    "DOCUMENT_INTELLIGENCE_ENDPOINTS": "DOCUMENT_INTELLIGENCE_ENDPOINTS",
     "DOCUMENT_INTELLIGENCE_MODEL_NAME": "DOCUMENT_INTELLIGENCE_MODEL_NAME",
 
     "SERVICEBUS_CONNECTION": "SERVICEBUS_CONNECTION",
