Refactor Azure configuration and update dependencies
- Removed deprecated API Management publisher parameters from main.parameters.json.
- Introduced new foundryConfig and foundryAgentId parameters for Azure Foundry integration.
- Updated package references in AiSearchIndexingFunction and other projects to latest versions.
- Refactored AiSearchHelper to improve error handling and added descriptions for methods.
- Updated ConfigKeys and Settings classes to reflect new Azure Foundry configurations.
- Enhanced SkHelper to utilize new Azure AI features and improved agent management.
- Modified CustomFieldExtractionFunction to handle cases with no custom fields specified.
- Updated launch settings for DocumentQueueingFunction for better local development experience.

--- a/infra/constants/configKeys.json
+++ b/infra/constants/configKeys.json
@@ -3,12 +3,12 @@
     "AZURE_AISEARCH_INCLUDE_GENERAL_INDEX": "AZURE_AISEARCH_INCLUDE_GENERAL_INDEX",
     "AZURE_AISEARCH_INDEX_NAME": "AZURE_AISEARCH_INDEX_NAME",
 
-    "AZURE_OPENAI_CHAT_DEPLOYMENT": "AZURE_OPENAI_CHAT_DEPLOYMENT",
-    "AZURE_OPENAI_CHAT_MODEL": "AZURE_OPENAI_CHAT_MODEL",
-    "AZURE_OPENAI_EMBEDDING_DEPLOYMENT": "AZURE_OPENAI_EMBEDDING_DEPLOYMENT",
-    "AZURE_OPENAI_EMBEDDING_MAXTOKENS": "AZURE_OPENAI_EMBEDDING_MAXTOKENS",
-    "AZURE_OPENAI_EMBEDDING_MODEL": "AZURE_OPENAI_EMBEDDING_MODEL",
-    "AZURE_OPENAI_ENDPOINT": "AZURE_OPENAI_ENDPOINT",
+    "AZURE_FOUNDRY_PROJECT_ENDPOINT": "AZURE_FOUNDRY_PROJECT_ENDPOINT",
+    "AZURE_FOUNDRY_AGENT_ID": "AZURE_FOUNDRY_AGENT_ID",
+    "AZURE_FOUNDRY_CHAT_DEPLOYMENT": "AZURE_FOUNDRY_CHAT_DEPLOYMENT",
+    "AZURE_FOUNDRY_EMBEDDING_DEPLOYMENT": "AZURE_FOUNDRY_EMBEDDING_DEPLOYMENT",
+    "AZURE_FOUNDRY_EMBEDDING_MAXTOKENS": "AZURE_FOUNDRY_EMBEDDING_MAXTOKENS",
+    "AZURE_FOUNDRY_EMBEDDING_MODEL": "AZURE_FOUNDRY_EMBEDDING_MODEL",
 
     "COSMOS_ACCOUNT_ENDPOINT": "COSMOS_ACCOUNT_ENDPOINT",
     "COSMOS_DB_NAME": "COSMOS_DB_NAME",
