--- a/src/DocumentQueueingFunction/Properties/launchSettings.json
+++ b/src/DocumentQueueingFunction/Properties/launchSettings.json
@@ -1,7 +1,12 @@
 {
   "profiles": {
-    "DocumentQueueing": {
-      "commandName": "Project"
+    "DocumentQueueingFunction": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:51173;http://localhost:51174"
     }
   }
 }
