--- a/src/AzureUtilities/UtilityLibrary.csproj
+++ b/src/AzureUtilities/UtilityLibrary.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
      <RootNamespace>HighVolumeProcessing.UtilityLibrary</RootNamespace>
@@ -30,6 +30,7 @@
 	  <PackageReference Include="Azure.AI.Projects" Version="1.2.0-beta.4" />
 	  <PackageReference Include="Azure.AI.Projects.OpenAI" Version="1.0.0-beta.4" />
 	  <PackageReference Include="Microsoft.Extensions.AI.OpenAI" Version="10.1.0-preview.1.25608.1" />
+    <PackageReference Include="System.Memory.Data" Version="10.0.0" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Prompts\**\*.yaml" />
