--- a/src/DocumentQuestionsFunction/appsettings.json
+++ b/src/DocumentQuestionsFunction/appsettings.json
@@ -1,24 +1,30 @@
 {
-  "IsEncrypted": false,
-  "Values": {
-    "AzureWebJobsStorage": "",
-    "OpenAIEndpoint": "",
-    "OpenAIKey": "",
-    "OpenAIChatModel": "gpt-4-32k",
-    "OpenAIChatDeploymentName": "gpt-4-32k",
-    "OpenAIEmbeddingModel": "text-embedding-ada-002",
-    "OpenAIEmbeddingDeploymentName": "text-embedding-ada-002",
-    "StorageAccount": "",
-    "StorageConnectionString": "",
-    "ExtractedContainerName": "extracted",
-    "ContainerName": "raw",
-    "RawStorageConnectionString": "",
-    "DocumentIntelligenceSubscriptionKey": "",
-    "DocumentIntelligenceEndpoint": "",
-    "CognitiveSearchEndpoint": "",
-    "CognitiveSearchAdminKey": "",
-    "UseOpenAIKey": "",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
-
-  }
+  "APPINSIGHTS_INSTRUMENTATIONKEY": "",
+  "APPLICATIONINSIGHTS_CONNECTION_STRING": "",
+  "AZURE_AISEARCH_ENDPOINT": "",
+  "AZURE_AISEARCH_INDEX_NAME": "documentindex",
+  "AZURE_FOUNDRY_CHAT_DEPLOYMENT": "gpt-5-mini",
+  "AZURE_FOUNDRY_EMBEDDING_DEPLOYMENT": "text-embedding-3-large",
+  "AZURE_FOUNDRY_EMBEDDING_MAXTOKENS": "8192",
+  "AZURE_FOUNDRY_EMBEDDING_MODEL": "text-embedding-3-large",
+  "AZURE_FOUNDRY_PROJECT_ENDPOINT": "",
+  "COSMOS_ACCOUNT_ENDPOINT": "",
+  "COSMOS_CONTAINER_NAME": "processTracker",
+  "COSMOS_DB_NAME": "documentIndexing",
+  "DOCUMENT_INTELLIGENCE_ENDPOINT": "",
+  "DOCUMENT_INTELLIGENCE_ENDPOINTS": "[]",
+  "DOCUMENT_INTELLIGENCE_MODEL_NAME": "prebuilt-layout",
+  "MANAGED_IDENTITY_CLIENT_ID": "",
+  "SERVICEBUS_CONNECTION__clientId": "",
+  "SERVICEBUS_CONNECTION__credential": "ManagedIdentity",
+  "SERVICEBUS_CONNECTION__fullyQualifiedNamespace": "",
+  "SERVICEBUS_CUSTOMFIELD_QUEUE_NAME": "customfieldqueue",
+  "SERVICEBUS_DOC_QUEUE_NAME": "docqueue",
+  "SERVICEBUS_MOVE_QUEUE_NAME": "movequeue",
+  "SERVICEBUS_NAMESPACE_NAME": "",
+  "SERVICEBUS_TOINDEX_QUEUE_NAME": "toindexqueue",
+  "STORAGE_ACCOUNT_NAME": "",
+  "STORAGE_COMPLETED_CONTAINER_NAME": "completed",
+  "STORAGE_PROCESS_RESULTS_CONTAINER_NAME": "processresults",
+  "STORAGE_SOURCE_CONTAINER_NAME": "documents"
 }
