Update to Agent Framework and Microsoft Foundry (#6)
Migration to Azure Container Apps and Naming Updates:

All services previously defined as Azure Functions (e.g., aisearch-function, custom-field-function) are now defined as Azure Container Apps (e.g., aisearch-app, custom-field-app) in azure.yaml, with appropriate Docker build contexts specified.
The provisioning script (Scripts/preup.ps1) updates all resource and service names, environment variables, and configuration objects to use the new Container App naming convention and structure, including changes to abbreviations and serviceName fields.
Documentation (README.md) is updated throughout to refer to "apps" instead of "functions," reflecting the migration to Container Apps and providing new instructions for triggering and interacting with these services. [1] [2]
Deployment and Environment Script Enhancements:

The post-deployment script (Scripts/postdeploy.ps1) is reworked to fetch environment variables from Container Apps (instead of Function Apps), alphabetize and write them to local.settings.json, and handle missing configuration more robustly. 
The upload script (Scripts/upload.ps1) now derives storage account and container names based on the new naming conventions and environment variables, removing dependency on Function App settings.
Environment variables for container registry endpoints and safe app names are set in Scripts/preup.ps1 to support container-based deployments.
Container Image Management:

A new post-package script (Scripts/postpackage.ps1) is introduced to automate tagging and pushing the latest built container images to Azure Container Registry (ACR), ensuring that deployments use up-to-date images.
Service Integration and Configuration:

The provisioning script now configures Microsoft Foundry as the embedding provider instead of Azure OpenAI, updating both documentation and infrastructure parameters accordingly.
Foundry-specific configuration and agent ID handling are added to the infr

--- a/src/DocumentQueueingFunction/Properties/launchSettings.json
+++ b/src/DocumentQueueingFunction/Properties/launchSettings.json
@@ -1,7 +1,12 @@
 {
   "profiles": {
-    "DocumentQueueing": {
-      "commandName": "Project"
+    "DocumentQueueingFunction": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+     
     }
   }
 }
