--- a/infra/constants/configKeys.json
+++ b/infra/constants/configKeys.json
@@ -1,24 +1,21 @@
 {
-    "APIM_SUBSCRIPTION_KEY": "APIM_SUBSCRIPTION_KEY",
-
-    "AZURE_AISEARCH_ADMIN_KEY": "AZURE_AISEARCH_ADMIN_KEY",
     "AZURE_AISEARCH_ENDPOINT": "AZURE_AISEARCH_ENDPOINT",
     "AZURE_AISEARCH_INCLUDE_GENERAL_INDEX": "AZURE_AISEARCH_INCLUDE_GENERAL_INDEX",
     "AZURE_AISEARCH_INDEX_NAME": "AZURE_AISEARCH_INDEX_NAME",
 
-    "AZURE_OPENAI_CHAT_DEPLOYMENT": "AZURE_OPENAI_CHAT_DEPLOYMENT",
-    "AZURE_OPENAI_CHAT_MODEL": "AZURE_OPENAI_CHAT_MODEL",
-    "AZURE_OPENAI_EMBEDDING_DEPLOYMENT": "AZURE_OPENAI_EMBEDDING_DEPLOYMENT",
-    "AZURE_OPENAI_EMBEDDING_MAXTOKENS": "AZURE_OPENAI_EMBEDDING_MAXTOKENS",
-    "AZURE_OPENAI_EMBEDDING_MODEL": "AZURE_OPENAI_EMBEDDING_MODEL",
-    "AZURE_OPENAI_ENDPOINT": "AZURE_OPENAI_ENDPOINT",
+    "AZURE_FOUNDRY_PROJECT_ENDPOINT": "AZURE_FOUNDRY_PROJECT_ENDPOINT",
+    "AZURE_FOUNDRY_AGENT_ID": "AZURE_FOUNDRY_AGENT_ID",
+    "AZURE_FOUNDRY_CHAT_DEPLOYMENT": "AZURE_FOUNDRY_CHAT_DEPLOYMENT",
+    "AZURE_FOUNDRY_EMBEDDING_DEPLOYMENT": "AZURE_FOUNDRY_EMBEDDING_DEPLOYMENT",
+    "AZURE_FOUNDRY_EMBEDDING_MAXTOKENS": "AZURE_FOUNDRY_EMBEDDING_MAXTOKENS",
+    "AZURE_FOUNDRY_EMBEDDING_MODEL": "AZURE_FOUNDRY_EMBEDDING_MODEL",
 
-    "COSMOS_CONNECTION": "COSMOS_CONNECTION",
+    "COSMOS_ACCOUNT_ENDPOINT": "COSMOS_ACCOUNT_ENDPOINT",
     "COSMOS_DB_NAME": "COSMOS_DB_NAME",
     "COSMOS_CONTAINER_NAME": "COSMOS_CONTAINER_NAME",
 
     "DOCUMENT_INTELLIGENCE_ENDPOINT": "DOCUMENT_INTELLIGENCE_ENDPOINT",
-    "DOCUMENT_INTELLIGENCE_KEY": "DOCUMENT_INTELLIGENCE_KEY",
+    "DOCUMENT_INTELLIGENCE_ENDPOINTS": "DOCUMENT_INTELLIGENCE_ENDPOINTS",
     "DOCUMENT_INTELLIGENCE_MODEL_NAME": "DOCUMENT_INTELLIGENCE_MODEL_NAME",
 
     "SERVICEBUS_CONNECTION": "SERVICEBUS_CONNECTION",
