--- a/src/ProcessedFileMover/ProcessedFileMover.csproj
+++ b/src/ProcessedFileMover/ProcessedFileMover.csproj
@@ -1,41 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
    <PropertyGroup>
-      <TargetFramework>net8.0</TargetFramework>
-      <AzureFunctionsVersion>v4</AzureFunctionsVersion>
+      <TargetFramework>net10.0</TargetFramework>
       <OutputType>Exe</OutputType>
+      <ImplicitUsings>enable</ImplicitUsings>
+      <Nullable>enable</Nullable>
         <RootNamespace>HighVolumeProcessing.ProcessedFileMover</RootNamespace>
       <AzureCosmosDisableNewtonsoftJsonCheck>true</AzureCosmosDisableNewtonsoftJsonCheck>
      <UserSecretsId>86b267d2-7bcf-4f77-a376-aad1e5ae9564</UserSecretsId>
   </PropertyGroup>
    <ItemGroup>
-      <PackageReference Include="Azure.Identity" Version="1.13.2" />
-      <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
-      <FrameworkReference Include="Microsoft.AspNetCore.App" />
-      <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="2.0.0" />
-      <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="2.0.2" />
-      <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="2.0.1" />
+      <PackageReference Include="Azure.Identity" Version="1.17.1" />
+      <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.20.1" />
+      <PackageReference Include="Azure.Storage.Blobs" Version="12.26.0" />
       <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="2.23.0" />
-      <PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="2.0.0" />
-      <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.ServiceBus" Version="5.22.2" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.1" />
 
    </ItemGroup>
    <ItemGroup>
       <ProjectReference Include="..\AzureUtilities\UtilityLibrary.csproj" />
    </ItemGroup>
    <ItemGroup>
-      <None Update="host.json">
-         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <None Update="appsettings.json">
+         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="local.settings.json">
          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
          <CopyToPublishDirectory>Never</CopyToPublishDirectory>
       </None>
-   </ItemGroup>
-   <ItemGroup>
-      <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
    </ItemGroup>
 </Project>
