--- a/src/DocumentQuestionsFunction/DocumentQuestionsFunction.csproj
+++ b/src/DocumentQuestionsFunction/DocumentQuestionsFunction.csproj
@@ -16,6 +16,7 @@
    </ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\AzureUtilities\UtilityLibrary.csproj" />
+	  <ProjectReference Include="..\DocumentIntelAndAISearchIndexing.ServiceDefaults\DocumentIntelAndAISearchIndexing.ServiceDefaults.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Update="appsettings.json">
