--- a/src/DocumentQueueingFunction/Properties/launchSettings.json
+++ b/src/DocumentQueueingFunction/Properties/launchSettings.json
@@ -5,8 +5,8 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-     
+      },
+      "applicationUrl": "https://localhost:8676;http://localhost:5310"
     }
   }
 }
