--- a/src/CustomFieldExtractionFunction/Dockerfile
+++ b/src/CustomFieldExtractionFunction/Dockerfile
@@ -5,8 +5,10 @@ COPY src/ ./src/
 RUN dotnet restore src/CustomFieldExtractionFunction/CustomFieldExtractionFunction.csproj
 RUN dotnet publish src/CustomFieldExtractionFunction/CustomFieldExtractionFunction.csproj -c Release -o /app/publish /p:UseAppHost=false
 
-FROM mcr.microsoft.com/dotnet/runtime:10.0 AS final
+FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS final
 WORKDIR /app
 COPY --from=build /app/publish .
+ENV ASPNETCORE_URLS=http://+:8080
 ENV COMPlus_EnableDiagnostics=0
+EXPOSE 8080
 ENTRYPOINT ["dotnet", "CustomFieldExtractionFunction.dll"]
